--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,11 @@
-*{
-    margin: 0;
-    padding: 0;
-
+* {
+  margin: 0;
+  padding: 0;
 }
 
 /* navbar */
 
-.navbar{
-    padding: 12px 160px;
-    background:rgb(252, 252, 252);
-    
-   
-   
-}
-.navbar-brand{
+/* .navbar-brand{
     color:rgb(69, 67, 67);
     font-size:38px;
     font-weight:bold;
@@ -38,9 +30,9 @@
     text-decoration-color:rgb(96, 96, 221); 
     text-decoration-thickness: 2px;
     text-underline-offset: 12px;  
-}
-#menu-button{
-   background-color: #1977cc;
-   color:white;
-   font-size:18px;
+} */
+#menu-button {
+  background-color: #1977cc;
+  color: white;
+  font-size: 18px;
 }
