--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,7 +206,7 @@
 }
 
 .service-box:hover {
-  background: #f2f3f3;
+  background: #1977cc;
   color: white;
 }
 
@@ -305,11 +305,44 @@
   background: #f1f7fd;
 }
 .social-icon {
-  width: 45px;
-  height: 45px;
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
   background: #1977cc;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-left: 10px;
+}
+.social-icon i {
+  color: white;
+}
+/* testmonial */
+.testimonial {
+  border: 1px solid rgb(142, 197, 236);
+  border-radius: 10px;
+}
+.testimonial span {
+  font-size: 16px;
+}
+/* swipper */
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
