--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -269,14 +269,6 @@
   align-items: center;
   justify-content: center;
 }
-.contact-icon:hover,
-.contact-icon i:hover {
-  background: #3371db;
-  color: white;
-}
-.contact-icon i {
-  color: #75a0ea;
-}
 
 .span-color {
   color: rgb(183, 172, 172);
@@ -347,4 +339,20 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+/* cardiology */
+
+.nav {
+  border-right: 1px solid rgb(188, 210, 210);
+}
+.nav-item {
+  border-right: 2px solid rgb(69, 127, 234);
+}
+
+.details h3 {
+  font-size: 26px;
+  font-weight: 600;
+  margin-bottom: 20px;
+  color: #2c4964;
 }
